add_compile_definitions(BOOST_TEST_DYN_LINK)

link_libraries(Boost::unit_test_framework Boost::thread rt)

macro(add_test_module test_module_name)
    add_executable(${test_module_name} ${test_module_name}.cpp ${ARGN})
    target_compile_definitions(${test_module_name} PRIVATE BOOST_TEST_MODULE=${test_module_name})
    add_test(NAME ${test_module_name} COMMAND ${test_module_name})
endmacro()

add_test_module(args_aspect_test)
add_test_module(aspect_map_test)
add_test_module(auto_app_test)
add_test_module(auto_handler_global_context_test)
add_test_module(auto_handler_test)
add_test_module(ensure_single_instance_test)
add_test_module(global_context_test)
add_test_module(handler_test)
add_test_module(launch_test)
add_test_module(myexception_test)
add_test_module(path_aspect_test)
add_test_module(signal_binder_test)
add_test_module(simple_common_application_test)
add_test_module(simple_server_application_test)
add_test_module(tunit_test myapp.cpp)
